@@ -209,7 +209,7 @@ public class SchemaTest implements java.io.Serializable {
      */
     public org.exolab.castor.tests.framework.testDescriptor.UnitTestCase removeUnitTestCaseAt(
             final int index) {
-        Object obj = this._unitTestCaseList.remove(index);
+        java.lang.Object obj = this._unitTestCaseList.remove(index);
         return (org.exolab.castor.tests.framework.testDescriptor.UnitTestCase) obj;
     }
 
