@@ -333,7 +333,7 @@ public class TestDescriptor implements java.io.Serializable {
      */
     public java.lang.String removeCommentAt(
             final int index) {
-        Object obj = this._commentList.remove(index);
+        java.lang.Object obj = this._commentList.remove(index);
         return (java.lang.String) obj;
     }
 
