@@ -1,7 +1,7 @@
-#Sat Jan 13 17:51:42 CST 2007
+#Thu Jan 18 00:10:42 CST 2007
 org.exolab.castor.tests.framework.testDescriptor.types.FailureType=org.exolab.castor.tests.framework.testDescriptor.types.FailureTypeDescriptor
-org.exolab.castor.tests.framework.testDescriptor.types.CategoryType=org.exolab.castor.tests.framework.testDescriptor.types.descriptors.CategoryTypeDescriptor
 org.exolab.castor.tests.framework.testDescriptor.types.FailureStep=org.exolab.castor.tests.framework.testDescriptor.types.FailureStepDescriptor
+org.exolab.castor.tests.framework.testDescriptor.types.CategoryType=org.exolab.castor.tests.framework.testDescriptor.types.descriptors.CategoryTypeDescriptor
 org.exolab.castor.tests.framework.testDescriptor.types.CollectionType=org.exolab.castor.tests.framework.testDescriptor.types.descriptors.CollectionTypeDescriptor
-org.exolab.castor.tests.framework.testDescriptor.types.TypeType=org.exolab.castor.tests.framework.testDescriptor.types.descriptors.TypeTypeDescriptor
 org.exolab.castor.tests.framework.testDescriptor.types.FailureStepType=org.exolab.castor.tests.framework.testDescriptor.types.descriptors.FailureStepTypeDescriptor
+org.exolab.castor.tests.framework.testDescriptor.types.TypeType=org.exolab.castor.tests.framework.testDescriptor.types.descriptors.TypeTypeDescriptor
