@@ -1,24 +1,22 @@
 
-
 public class Foo {
-    
+
     private int size = 20;
-    
+
     public Foo() {
-        
+        // Nothing to do
     }
-    
+
     public Foo(int size) {
-        System.out.println("Foo("  + size + ")"); 
         this.size = size;
     }
-    
+
     public int getSize() {
         return size;
     }
-    
+
     public void setSize(int size) {
         this.size = size;
     }
-    
+
 }
