@@ -2,11 +2,10 @@ package base;
 
 import generated.Item;
 
-
 public class MyItem extends Item {
 
-	public void hello(){
-		System.out.println("name = " + getName());
-	}
-	
+    public void hello() {
+//      System.out.println("name = " + getName());
+    }
+
 }
